verilog_langserver/verilog_parser/antlr_build/DocumentSymbolsParser.py
# Generated from C:\Users\eirik\Desktop\verilog-langserver\verilog_langserver\verilog_parser/grammar/DocumentSymbols.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class DocumentSymbolsParser ( Parser ):

    grammarFileName = "DocumentSymbols.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'#('", "'void'", "'static'", "'automatic'", 
                     "'$root'", "<INVALID>", "<INVALID>", "' '", "'\t'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'['", "']'", 
                     "'('", "')'", "'{'", "'}'", "';'", "':'", "','", "'='", 
                     "'?'", "'.'", "<INVALID>", "<INVALID>", "'module'", 
                     "'endmodule'", "'interface'", "'endinterface'", "'class'", 
                     "'endclass'", "'config'", "'endconfig'", "'primitive'", 
                     "'endprimitive'", "'program'", "'endprogram'", "'task'", 
                     "'endtask'", "'function'", "'endfunction'", "'package'", 
                     "'endpackage'", "'input'", "'output'", "'virtual'", 
                     "'typedef'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SINGLELINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACE", "TAB", "NEWLINE", "String", "COMPILER_DIRECTIVE", 
                      "OpenBracket", "CloseBracket", "OpenParen", "CloseParen", 
                      "OpenBrace", "CloseBrace", "SemiColon", "Colon", "Comma", 
                      "Assign", "QuestionMark", "Dot", "Apostrophe", "Operators", 
                      "Module", "Endmodule", "Interface", "Endinterface", 
                      "Class", "Endclass", "Config", "Endconfig", "Primitive", 
                      "Endprimitive", "Program", "Endprogram", "Task", "Endtask", 
                      "Function", "Endfunction", "Package", "Endpackage", 
                      "Input", "Output", "Virtual", "Typedef", "Number", 
                      "IntegralNumber", "RealNumber", "UnsignedNumber", 
                      "DecimalNumber", "BinaryNumber", "OctalNumber", "HexNumber", 
                      "UnbasedUnsizedLiteral", "Time", "Word" ]

    RULE_source = 0
    RULE_declaration = 1
    RULE_module_declaration = 2
    RULE_interface_declaration = 3
    RULE_program_declaration = 4
    RULE_package_declaration = 5
    RULE_config_declaration = 6
    RULE_class_declaration = 7
    RULE_udp_declaration = 8
    RULE_item = 9
    RULE_task_declaration = 10
    RULE_function_declaration = 11
    RULE_type_declaration = 12
    RULE_parameter_port_list = 13
    RULE_port_list = 14
    RULE_return_val = 15
    RULE_life_time = 16
    RULE_identifier = 17
    RULE_label = 18
    RULE_hierarchical_identifier = 19
    RULE_constant_bit_select = 20

    ruleNames =  [ "source", "declaration", "module_declaration", "interface_declaration", 
                   "program_declaration", "package_declaration", "config_declaration", 
                   "class_declaration", "udp_declaration", "item", "task_declaration", 
                   "function_declaration", "type_declaration", "parameter_port_list", 
                   "port_list", "return_val", "life_time", "identifier", 
                   "label", "hierarchical_identifier", "constant_bit_select" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    SINGLELINE_COMMENT=6
    MULTILINE_COMMENT=7
    SPACE=8
    TAB=9
    NEWLINE=10
    String=11
    COMPILER_DIRECTIVE=12
    OpenBracket=13
    CloseBracket=14
    OpenParen=15
    CloseParen=16
    OpenBrace=17
    CloseBrace=18
    SemiColon=19
    Colon=20
    Comma=21
    Assign=22
    QuestionMark=23
    Dot=24
    Apostrophe=25
    Operators=26
    Module=27
    Endmodule=28
    Interface=29
    Endinterface=30
    Class=31
    Endclass=32
    Config=33
    Endconfig=34
    Primitive=35
    Endprimitive=36
    Program=37
    Endprogram=38
    Task=39
    Endtask=40
    Function=41
    Endfunction=42
    Package=43
    Endpackage=44
    Input=45
    Output=46
    Virtual=47
    Typedef=48
    Number=49
    IntegralNumber=50
    RealNumber=51
    UnsignedNumber=52
    DecimalNumber=53
    BinaryNumber=54
    OctalNumber=55
    HexNumber=56
    UnbasedUnsizedLiteral=57
    Time=58
    Word=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SourceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DocumentSymbolsParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.DeclarationContext,i)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_source

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSource" ):
                return visitor.visitSource(self)
            else:
                return visitor.visitChildren(self)




    def source(self):

        localctx = DocumentSymbolsParser.SourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_source)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DocumentSymbolsParser.T__0) | (1 << DocumentSymbolsParser.T__1) | (1 << DocumentSymbolsParser.T__2) | (1 << DocumentSymbolsParser.T__3) | (1 << DocumentSymbolsParser.T__4) | (1 << DocumentSymbolsParser.SINGLELINE_COMMENT) | (1 << DocumentSymbolsParser.MULTILINE_COMMENT) | (1 << DocumentSymbolsParser.SPACE) | (1 << DocumentSymbolsParser.TAB) | (1 << DocumentSymbolsParser.NEWLINE) | (1 << DocumentSymbolsParser.String) | (1 << DocumentSymbolsParser.COMPILER_DIRECTIVE) | (1 << DocumentSymbolsParser.OpenBracket) | (1 << DocumentSymbolsParser.CloseBracket) | (1 << DocumentSymbolsParser.OpenParen) | (1 << DocumentSymbolsParser.CloseParen) | (1 << DocumentSymbolsParser.OpenBrace) | (1 << DocumentSymbolsParser.CloseBrace) | (1 << DocumentSymbolsParser.SemiColon) | (1 << DocumentSymbolsParser.Colon) | (1 << DocumentSymbolsParser.Comma) | (1 << DocumentSymbolsParser.Assign) | (1 << DocumentSymbolsParser.QuestionMark) | (1 << DocumentSymbolsParser.Dot) | (1 << DocumentSymbolsParser.Apostrophe) | (1 << DocumentSymbolsParser.Operators) | (1 << DocumentSymbolsParser.Module) | (1 << DocumentSymbolsParser.Endmodule) | (1 << DocumentSymbolsParser.Interface) | (1 << DocumentSymbolsParser.Endinterface) | (1 << DocumentSymbolsParser.Class) | (1 << DocumentSymbolsParser.Endclass) | (1 << DocumentSymbolsParser.Config) | (1 << DocumentSymbolsParser.Endconfig) | (1 << DocumentSymbolsParser.Primitive) | (1 << DocumentSymbolsParser.Endprimitive) | (1 << DocumentSymbolsParser.Program) | (1 << DocumentSymbolsParser.Endprogram) | (1 << DocumentSymbolsParser.Task) | (1 << DocumentSymbolsParser.Endtask) | (1 << DocumentSymbolsParser.Function) | (1 << DocumentSymbolsParser.Endfunction) | (1 << DocumentSymbolsParser.Package) | (1 << DocumentSymbolsParser.Endpackage) | (1 << DocumentSymbolsParser.Input) | (1 << DocumentSymbolsParser.Output) | (1 << DocumentSymbolsParser.Virtual) | (1 << DocumentSymbolsParser.Typedef) | (1 << DocumentSymbolsParser.Number) | (1 << DocumentSymbolsParser.IntegralNumber) | (1 << DocumentSymbolsParser.RealNumber) | (1 << DocumentSymbolsParser.UnsignedNumber) | (1 << DocumentSymbolsParser.DecimalNumber) | (1 << DocumentSymbolsParser.BinaryNumber) | (1 << DocumentSymbolsParser.OctalNumber) | (1 << DocumentSymbolsParser.HexNumber) | (1 << DocumentSymbolsParser.UnbasedUnsizedLiteral) | (1 << DocumentSymbolsParser.Time) | (1 << DocumentSymbolsParser.Word))) != 0):
                self.state = 48
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 42
                    self.declaration()
                    pass

                elif la_ == 2:
                    self.state = 44 
                    self._errHandler.sync(self)
                    _alt = 1+1
                    while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1+1:
                            self.state = 43
                            self.matchWildcard()

                        else:
                            raise NoViableAltException(self)
                        self.state = 46 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass


                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(DocumentSymbolsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def module_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Module_declarationContext,0)


        def interface_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Interface_declarationContext,0)


        def program_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Program_declarationContext,0)


        def package_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Package_declarationContext,0)


        def config_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Config_declarationContext,0)


        def udp_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Udp_declarationContext,0)


        def item(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = DocumentSymbolsParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 62
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.module_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.interface_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.program_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.package_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.config_declaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.udp_declaration()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.item()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Module(self):
            return self.getToken(DocumentSymbolsParser.Module, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endmodule(self):
            return self.getToken(DocumentSymbolsParser.Endmodule, 0)

        def parameter_port_list(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Parameter_port_listContext,0)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_module_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_declaration" ):
                return visitor.visitModule_declaration(self)
            else:
                return visitor.visitChildren(self)




    def module_declaration(self):

        localctx = DocumentSymbolsParser.Module_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_module_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(DocumentSymbolsParser.Module)
            self.state = 65
            self.identifier()
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 66
                self.parameter_port_list()


            self.state = 72
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 69
                    self.item() 
                self.state = 74
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 75
            self.match(DocumentSymbolsParser.Endmodule)
            self.state = 77
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 76
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Interface(self):
            return self.getToken(DocumentSymbolsParser.Interface, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endinterface(self):
            return self.getToken(DocumentSymbolsParser.Endinterface, 0)

        def parameter_port_list(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Parameter_port_listContext,0)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_interface_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_declaration" ):
                return visitor.visitInterface_declaration(self)
            else:
                return visitor.visitChildren(self)




    def interface_declaration(self):

        localctx = DocumentSymbolsParser.Interface_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_interface_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(DocumentSymbolsParser.Interface)
            self.state = 80
            self.identifier()
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 81
                self.parameter_port_list()


            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 84
                    self.item() 
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 90
            self.match(DocumentSymbolsParser.Endinterface)
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 91
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Program_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Program(self):
            return self.getToken(DocumentSymbolsParser.Program, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endprogram(self):
            return self.getToken(DocumentSymbolsParser.Endprogram, 0)

        def life_time(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Life_timeContext,0)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_program_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram_declaration" ):
                return visitor.visitProgram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def program_declaration(self):

        localctx = DocumentSymbolsParser.Program_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_program_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(DocumentSymbolsParser.Program)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DocumentSymbolsParser.T__2 or _la==DocumentSymbolsParser.T__3:
                self.state = 95
                self.life_time()


            self.state = 98
            self.identifier()
            self.state = 102
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 99
                    self.item() 
                self.state = 104
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 105
            self.match(DocumentSymbolsParser.Endprogram)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 106
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Package_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Package(self):
            return self.getToken(DocumentSymbolsParser.Package, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endpackage(self):
            return self.getToken(DocumentSymbolsParser.Endpackage, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_package_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPackage_declaration" ):
                return visitor.visitPackage_declaration(self)
            else:
                return visitor.visitChildren(self)




    def package_declaration(self):

        localctx = DocumentSymbolsParser.Package_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_package_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(DocumentSymbolsParser.Package)
            self.state = 110
            self.identifier()
            self.state = 114
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 111
                    self.item() 
                self.state = 116
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

            self.state = 117
            self.match(DocumentSymbolsParser.Endpackage)
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 118
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Config(self):
            return self.getToken(DocumentSymbolsParser.Config, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endconfig(self):
            return self.getToken(DocumentSymbolsParser.Endconfig, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_config_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConfig_declaration" ):
                return visitor.visitConfig_declaration(self)
            else:
                return visitor.visitChildren(self)




    def config_declaration(self):

        localctx = DocumentSymbolsParser.Config_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_config_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(DocumentSymbolsParser.Config)
            self.state = 122
            self.identifier()
            self.state = 126
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 123
                    self.item() 
                self.state = 128
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 129
            self.match(DocumentSymbolsParser.Endconfig)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,16,self._ctx)
            if la_ == 1:
                self.state = 130
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(DocumentSymbolsParser.Class, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endclass(self):
            return self.getToken(DocumentSymbolsParser.Endclass, 0)

        def Virtual(self):
            return self.getToken(DocumentSymbolsParser.Virtual, 0)

        def life_time(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Life_timeContext,0)


        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_class_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_declaration" ):
                return visitor.visitClass_declaration(self)
            else:
                return visitor.visitChildren(self)




    def class_declaration(self):

        localctx = DocumentSymbolsParser.Class_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_class_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DocumentSymbolsParser.Virtual:
                self.state = 133
                self.match(DocumentSymbolsParser.Virtual)


            self.state = 136
            self.match(DocumentSymbolsParser.Class)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DocumentSymbolsParser.T__2 or _la==DocumentSymbolsParser.T__3:
                self.state = 137
                self.life_time()


            self.state = 140
            self.identifier()
            self.state = 144
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,19,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 141
                    self.item() 
                self.state = 146
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

            self.state = 147
            self.match(DocumentSymbolsParser.Endclass)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,20,self._ctx)
            if la_ == 1:
                self.state = 148
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Udp_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Primitive(self):
            return self.getToken(DocumentSymbolsParser.Primitive, 0)

        def identifier(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.IdentifierContext,0)


        def Endprimitive(self):
            return self.getToken(DocumentSymbolsParser.Endprimitive, 0)

        def item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DocumentSymbolsParser.ItemContext)
            else:
                return self.getTypedRuleContext(DocumentSymbolsParser.ItemContext,i)


        def label(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.LabelContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_udp_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUdp_declaration" ):
                return visitor.visitUdp_declaration(self)
            else:
                return visitor.visitChildren(self)




    def udp_declaration(self):

        localctx = DocumentSymbolsParser.Udp_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_udp_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(DocumentSymbolsParser.Primitive)
            self.state = 152
            self.identifier()
            self.state = 156
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 153
                    self.item() 
                self.state = 158
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 159
            self.match(DocumentSymbolsParser.Endprimitive)
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 160
                self.label()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def task_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Task_declarationContext,0)


        def function_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Function_declarationContext,0)


        def class_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Class_declarationContext,0)


        def type_declaration(self):
            return self.getTypedRuleContext(DocumentSymbolsParser.Type_declarationContext,0)


        def getRuleIndex(self):
            return DocumentSymbolsParser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = DocumentSymbolsParser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_item)
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,24,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.task_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 164
                self.function_declaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 165
                self.class_declaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 166
                self.type_declaration()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168 
                self._errHandler.sync(self)
                _alt = 1+1
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt == 1+1:
                        self.state = 167
                        self.matchWildcard()

                    else:
                        raise NoViableAltException(self)
                    self.state = 170 
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Task_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
